plugins {
    id 'org.springframework.boot' version '2.7.2'
    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
    id 'java'
    id "io.freefair.lombok" version "6.5.0.3"
}

group = 'br.com.forttiori'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.0'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.0'
    implementation 'org.projectlombok:lombok:1.18.24'
    implementation 'com.mageddo.lombok:lombok-ext:2.3.4'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
    implementation 'org.jetbrains:annotations:20.1.0'
    implementation 'org.assertj:assertj-core:3.23.1'
    developmentOnly 'org.springframework.boot:spring-boot-devtools:2.7.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.0'
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
